crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D205_D205.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    name: BlankLineAfterSummary
    body: 1 blank line required between summary line and description
    suggestion: Insert single blank line
    fixable: true
  location:
    row: 13
    column: 4
  end_location:
    row: 15
    column: 8
  fix:
    content: "\n"
    location:
      row: 14
      column: 0
    end_location:
      row: 14
      column: 0
  parent: ~
- kind:
    name: BlankLineAfterSummary
    body: 1 blank line required between summary line and description
    suggestion: Insert single blank line
    fixable: true
  location:
    row: 30
    column: 4
  end_location:
    row: 38
    column: 22
  fix:
    content: "\n"
    location:
      row: 35
      column: 0
    end_location:
      row: 35
      column: 0
  parent: ~
- kind:
    name: BlankLineAfterSummary
    body: 1 blank line required between summary line and description (found 3)
    suggestion: Remove redundant blank lines
    fixable: true
  location:
    row: 42
    column: 4
  end_location:
    row: 53
    column: 22
  fix:
    content: ""
    location:
      row: 48
      column: 0
    end_location:
      row: 50
      column: 0
  parent: ~

