crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D207_D.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    name: UnderIndentation
    body: Docstring is under-indented
    suggestion: Increase indentation
    fixable: true
  location:
    row: 232
    column: 0
  end_location:
    row: 232
    column: 0
  fix:
    edits:
      - location:
          row: 232
          column: 0
        end_location:
          row: 232
          column: 0
        content: "    "
  parent: ~
- kind:
    name: UnderIndentation
    body: Docstring is under-indented
    suggestion: Increase indentation
    fixable: true
  location:
    row: 244
    column: 0
  end_location:
    row: 244
    column: 0
  fix:
    edits:
      - location:
          row: 244
          column: 0
        end_location:
          row: 244
          column: 0
        content: "    "
  parent: ~
- kind:
    name: UnderIndentation
    body: Docstring is under-indented
    suggestion: Increase indentation
    fixable: true
  location:
    row: 440
    column: 0
  end_location:
    row: 440
    column: 0
  fix:
    edits:
      - location:
          row: 440
          column: 0
        end_location:
          row: 440
          column: 4
        content: "                                    "
  parent: ~
- kind:
    name: UnderIndentation
    body: Docstring is under-indented
    suggestion: Increase indentation
    fixable: true
  location:
    row: 441
    column: 0
  end_location:
    row: 441
    column: 0
  fix:
    edits:
      - location:
          row: 441
          column: 0
        end_location:
          row: 441
          column: 4
        content: "                                    "
  parent: ~

