crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D208_D.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    name: OverIndentation
    body: Docstring is over-indented
    suggestion: Remove over-indentation
    fixable: true
  location:
    row: 252
    column: 0
  end_location:
    row: 252
    column: 0
  fix:
    edits:
      - location:
          row: 252
          column: 0
        end_location:
          row: 252
          column: 7
        content: "    "
  parent: ~
- kind:
    name: OverIndentation
    body: Docstring is over-indented
    suggestion: Remove over-indentation
    fixable: true
  location:
    row: 264
    column: 0
  end_location:
    row: 264
    column: 0
  fix:
    edits:
      - location:
          row: 264
          column: 0
        end_location:
          row: 264
          column: 8
        content: "    "
  parent: ~
- kind:
    name: OverIndentation
    body: Docstring is over-indented
    suggestion: Remove over-indentation
    fixable: true
  location:
    row: 272
    column: 0
  end_location:
    row: 272
    column: 0
  fix:
    edits:
      - location:
          row: 272
          column: 0
        end_location:
          row: 272
          column: 8
        content: "    "
  parent: ~

