crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D214_D214_module.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
---
D214_module.py:1:1: D214 [*] Section is over-indented ("Returns")
   |
 1 | / """A module docstring with D214 violations
 2 | | 
 3 | |     Returns
 4 | | -----
 5 | |     valid returns
 6 | | 
 7 | |     Args
 8 | | -----
 9 | |     valid args
10 | | """
   | |___^ D214
11 |   
12 |   import os
   |
   = help: Remove over-indentation from "Returns"

ℹ Suggested fix
1 1 | """A module docstring with D214 violations
2 2 | 
3   |-    Returns
  3 |+Returns
4 4 | -----
5 5 |     valid returns
6 6 | 

D214_module.py:1:1: D214 [*] Section is over-indented ("Args")
   |
 1 | / """A module docstring with D214 violations
 2 | | 
 3 | |     Returns
 4 | | -----
 5 | |     valid returns
 6 | | 
 7 | |     Args
 8 | | -----
 9 | |     valid args
10 | | """
   | |___^ D214
11 |   
12 |   import os
   |
   = help: Remove over-indentation from "Args"

ℹ Suggested fix
4 4 | -----
5 5 |     valid returns
6 6 | 
7   |-    Args
  7 |+Args
8 8 | -----
9 9 |     valid args
10 10 | """


